<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:textColor="@color/black"
        android:textSize="13pt"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textSize="8pt"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/task_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:inputType="text"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:textColor="@color/black"
                android:textSize="7pt"
                android:padding="10dp"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_description"
                android:textSize="8pt"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/task_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="7pt"
                android:padding="10dp"
                android:maxLines="5"
                android:lines="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_additional_info"
                android:textSize="7pt"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/task_additional_info_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:inputType="text"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="7pt"
                android:padding="10dp"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_necessity"
                android:textSize="7pt"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:id="@+id/necessity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="start"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/level1_necessity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/level1"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/level2_necessity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/level2"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/level3_necessity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/level3"
                    android:textColor="@color/black"/>

            </RadioGroup>

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:background="@drawable/btn_background"
                android:text="@string/save"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="10pt"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>